# ShahrFlow

./: .gitattributes  .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake-single-platform.yml
include/glad/: glad.h
resource/: Resource.rc  settings.json
shaders/: edge_fragment.glsl  edge_vertex.glsl  static_vertex.glsl  vertex.glsl
src/: desktopUtils.cpp  desktopUtils.h  glad.c  main.cpp  resource.h  settings.cpp  settings.h  trayUtils.cpp  trayUtils.h  utils.cpp  utils.h
